got templates rendering for final project

--- a/WorkingWithConcurrency/final-project/Makefile
+++ b/WorkingWithConcurrency/final-project/Makefile
@@ -36,3 +36,11 @@ restart: stop start
 ## test: runs all tests
 test:
 	go test -v ./...
+
+## up: brings up docker containers
+up:
+	docker-compose up -d
+
+## down: takes down docker containers
+down:
+	docker-compose down
