--- a/Microservices/project/swarm.yml
+++ b/Microservices/project/swarm.yml
@@ -1,10 +1,28 @@
 version: '3'
 
 services:
+  caddy:
+    image: maker2413/caddy:latest
+    deploy:
+      mode: replicated
+      replicas: 1
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - caddy_data:/data
+      - caddy_config:/config
+
+  front-end:
+    image: maker2413/front-end:latest
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      BROKER_URL: "http://backend"
+
   broker-service:
     image: maker2413/broker-service:latest
-    ports:
-      - "8080:80"
     deploy:
       mode: replicated
       replicas: 1
@@ -82,3 +100,8 @@ services:
     image: 'rabbitmq:3.9-alpine'
     deploy:
       mode: global
+
+volumes:
+  caddy_data:
+    external: true
+  caddy_config:
