--- a/BuildingWebApplicationsWithGo/webApp/.air.toml
+++ b/BuildingWebApplicationsWithGo/webApp/.air.toml
@@ -15,7 +15,7 @@ full_bin = "STRIPE_SECRET= STRIPE_KEY= ./tmp/main"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html", "gohtml"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
+exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules", "db-data"]
 # Watch these directories if you specified.
 include_dir = []
 # Exclude files.
