began React course

--- a/BuildingWebApplicationsWithGo/Makefile
+++ b/BuildingWebApplicationsWithGo/Makefile
@@ -1,5 +1,5 @@
-STRIPE_SECRET=
-STRIPE_KEY=
+STRIPE_SECRET=sk_test_51QaHfrKnDGT3qqI46bxmETZTXXnPnVJ49bbnf86qXPw17tI46n2LC5XDrVHdRehqY7Wbx1St49z7uiRcy8XvW0ea007O97PgQo
+STRIPE_KEY=pk_test_51QaHfrKnDGT3qqI4KnkP8PNGyP1FH2qYfXY4aASFaBfmOn9vfmyt3mxsIXE4nrG4x1YYBSkHvCrdxdlgsfW7KKzC00oap1XUpi
 GOSTRIPE_PORT=4000
 API_PORT=4001
 DSN=maker:verysecret@tcp(127.0.0.1:3306)/widgets?parseTime=true&tls=false
