--- a/WorkingWithReactAndGo/my-app/package.json
+++ b/WorkingWithReactAndGo/my-app/package.json
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.6",
+    "webpack-dev-server": "^4.15.2"
   }
 }
