--- a/WorkingWithReactAndGo/my-app/package.json
+++ b/WorkingWithReactAndGo/my-app/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +40,9 @@
   "overrides": {
     "nth-check": "^2.1.1",
     "postcss": "^8.5.6",
-    "webpack-dev-server": "^4.15.2"
+    "webpack-dev-server": "^5.2.2"
+  },
+  "devDependencies": {
+    "patch-package": "^8.0.0"
   }
 }
