--- a/WorkingWithReactAndGo/my-app/package.json
+++ b/WorkingWithReactAndGo/my-app/package.json
@@ -40,7 +40,8 @@
   "overrides": {
     "nth-check": "^2.1.1",
     "postcss": "^8.5.6",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^5.2.2",
+    "tmp": "0.2.5"
   },
   "devDependencies": {
     "patch-package": "^8.0.0"
