--- a/WorkingWithReactAndGo/my-app/package.json
+++ b/WorkingWithReactAndGo/my-app/package.json
@@ -38,11 +38,12 @@
     ]
   },
   "overrides": {
-    "nth-check": "^2.1.1",
-    "postcss": "^8.5.6",
-    "webpack-dev-server": "^5.2.2",
-    "tmp": "0.2.5"
-  },
+      "nth-check": "^2.1.1",
+      "postcss": "^8.5.6",
+      "webpack-dev-server": "^5.2.2",
+      "tmp": "0.2.5",
+      "node-forge": ">=1.3.2"
+   },
   "devDependencies": {
     "patch-package": "^8.0.0"
   }
