--- a/WorkingWithReactAndGo/my-app/package.json
+++ b/WorkingWithReactAndGo/my-app/package.json
@@ -42,7 +42,8 @@
       "postcss": "^8.5.6",
       "webpack-dev-server": "^5.2.2",
       "tmp": "0.2.5",
-      "node-forge": ">=1.3.2"
+      "node-forge": ">=1.3.2",
+      "js-yaml": ">=4.1.1"
    },
   "devDependencies": {
     "patch-package": "^8.0.0"
