--- a/WorkingWithReactAndGo/my-app/package.json
+++ b/WorkingWithReactAndGo/my-app/package.json
@@ -43,7 +43,8 @@
       "webpack-dev-server": "^5.2.2",
       "tmp": "0.2.5",
       "node-forge": ">=1.3.2",
-      "js-yaml": ">=4.1.1"
+      "js-yaml": ">=4.1.1",
+      "express": ">=4.22.0"
    },
   "devDependencies": {
     "patch-package": "^8.0.0"
