--- a/WorkingWithReactAndGo/my-app/package.json
+++ b/WorkingWithReactAndGo/my-app/package.json
@@ -44,7 +44,8 @@
       "tmp": "0.2.5",
       "node-forge": ">=1.3.2",
       "js-yaml": ">=4.1.1",
-      "express": ">=4.22.0"
+      "express": ">=4.22.0",
+      "glob": ">=10.5.0"
    },
   "devDependencies": {
     "patch-package": "^8.0.0"
